fix: removed grid center to fix issue of large grid size spilling out the container

--- a/odin-js/etch-a-sketch/styles.css
+++ b/odin-js/etch-a-sketch/styles.css
@@ -62,7 +62,6 @@ main {
 
 .grid-container {
   display: grid;
-  place-items: center;
   background-color: var(--secondary-color);
   width: 30rem;
   height: 30rem;
@@ -70,8 +69,6 @@ main {
 }
 
 .grid {
-  width: 1.5rem;
-  height: 1.5rem;
   background-color: var(--primary-color);
   user-select: none;
 }
